--- a/trunk/CR_MethodPreview/CR_MethodPreview/CR_MethodPreview.vbproj
+++ b/trunk/CR_MethodPreview/CR_MethodPreview/CR_MethodPreview.vbproj
@@ -73,7 +73,9 @@
     <Reference Include="DevExpress.DXCore.Controls.XtraTreeList.v6.3, Version=9.2.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.DXCore.Parser, Version=10.2.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.DXCore.Parser, Version=10.2.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
