--- a/trunk/CR_NavigateToDefinition/CR_NavigateToDefinition/CR_NavigateToDefinition.csproj
+++ b/trunk/CR_NavigateToDefinition/CR_NavigateToDefinition/CR_NavigateToDefinition.csproj
@@ -82,7 +82,10 @@
     <Reference Include="DevExpress.DXCore.Controls.XtraEditors.v6.3, Version=10.1.5.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.DXCore.Parser, Version=10.2.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.DXCore.Parser, Version=10.2.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\..\..\PROGRAM FILES (X86)\DEVEXPRESS 2010.2\IDETOOLS\System\DXCore\Bin\DevExpress.DXCore.Parser.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="DevExpress.DXCore.Platform, Version=10.1.5.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
